# 8V42_Bogomolov_programming_3sem_lab7

./: .gitignore  CMakeLists.txt  Hash.cpp  Hash.h  README.md  ScanDir.cpp  ScanDir.h  main.cpp
.github/workflows/: release.yml
test_scan/: test1
test_scan/testdir/: t3
